--- a/settings.css
+++ b/settings.css
@@ -1,13 +1,14 @@
 
 
 body	{
-		color: #000000;
-		background-color: #eedd82;
-		max-width: 600px;
+	        background-color:AliceBlue;
+		font-size:11pt;
+		font-family:sans-serif;
+		color:DarkSlateGray; 
 	}
-a:active	{ color: #880066; }
-a:link		{ color: #880066; }
-a:visited	{ color: #000000; }
+a       { 	color:SteelBlue;
+	  	text-decoration:none;
+	}
 
 
 
